--- a/paper/sources.bib
+++ b/paper/sources.bib
@@ -1,5 +1,5 @@
 @book{isabelle,
-    author={Tobias Nipkow and Lawrence Paulson and Markus Wenzel},
+    author={Tobias Nipkow and Lawrence C. Paulson and Markus Wenzel},
     title={{Isabelle/HOL --- A Proof Assistant for Higher-Order Logic}},
     publisher={Springer},
     series={LNCS},
@@ -54,13 +54,6 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@book{set_theory_for_computing,
-  title={Set theory for computing: from decision procedures to declarative programming with sets},
-  author={Cantone, Domenico and Omodeo, Eugenio and Policriti, Alberto},
-  year={2013},
-  publisher={Springer Science \& Business Media}
-}
-
 @article{tableau_quantifier_free,
   title={A Tableau Calculus for Quantifier-Free Set Theoretic Formulae},
   ISBN={9783540697787},
@@ -68,8 +61,8 @@
   url={http://dx.doi.org/10.1007/3-540-69778-0_16},
   DOI={10.1007/3-540-69778-0_16},
   journal={Automated Reasoning with Analytic Tableaux and Related Methods},
-  publisher={Springer Berlin Heidelberg},
-  author={Beckert Bernhard and Hartmer Ulrike},
+  publisher={Springer},
+  author={Beckert, Bernhard and Hartmer, Ulrike},
   year={1998},
   pages={93–107},
 }
@@ -139,7 +132,7 @@
   title={Linear Quantifier Elimination},
   booktitle={{Automated Reasoning}},
   year=2008,
-  publisher={{Springer Berlin Heidelberg}},
+  publisher={{Springer}},
   pages="18--33",
 } 
 
@@ -155,4 +148,151 @@
   url="https://doi.org/10.1007/978-1-4612-2360-3_3"
 }
 
+@inproceedings{presburger,
+  author    = {Amine Chaieb and
+               Tobias Nipkow},
+  editor    = {Geoff Sutcliffe and
+               Andrei Voronkov},
+  title     = {Verifying and Reflecting Quantifier Elimination for Presburger Arithmetic},
+  booktitle = {Logic for Programming, Artificial Intelligence, and Reasoning},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {3835},
+  pages     = {367--380},
+  publisher = {Springer},
+  year      = {2005},
+  url       = {https://doi.org/10.1007/11591191\_26},
+  doi       = {10.1007/11591191\_26},
+  timestamp = {Tue, 14 May 2019 10:00:55 +0200},
+  biburl    = {https://dblp.org/rec/conf/lpar/ChaiebN05.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{arithmetic,
+  author    = {Amine Chaieb},
+  editor    = {Ulrich Furbach and
+               Natarajan Shankar},
+  title     = {Verifying Mixed Real-Integer Quantifier Elimination},
+  booktitle = {International Joint Conference on Automated Reasoning},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {4130},
+  pages     = {528--540},
+  publisher = {Springer},
+  year      = {2006},
+  url       = {https://doi.org/10.1007/11814771\_43},
+  doi       = {10.1007/11814771\_43},
+  timestamp = {Tue, 14 May 2019 10:00:39 +0200},
+  biburl    = {https://dblp.org/rec/conf/cade/Chaieb06.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@InProceedings{orders,
+  author="Stevens, Lukas
+  and Nipkow, Tobias",
+  editor="Hou, Zhe
+  and Ganesh, Vijay",
+  title="A Verified Decision Procedure for Orders in Isabelle/HOL",
+  booktitle="Automated Technology for Verification and Analysis",
+  year="2021",
+  publisher="Springer International Publishing",
+  pages="127--143",
+  isbn="978-3-030-88885-5"
+}
+
+@book{set_theory,
+  author    = {Domenico Cantone and
+               Eugenio G. Omodeo and
+               Alberto Policriti},
+  title     = {Set Theory for Computing - From Decision Procedures to Declarative Programming with Sets},
+  series    = {Monographs in Computer Science},
+  publisher = {Springer},
+  year      = {2001},
+  url       = {https://doi.org/10.1007/978-1-4757-3452-2},
+  doi       = {10.1007/978-1-4757-3452-2},
+  isbn      = {978-1-4419-2905-1},
+  timestamp = {Tue, 16 May 2017 14:24:21 +0200},
+  biburl    = {https://dblp.org/rec/series/mcs/CantoneOP01.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{mlss_cartesian_map,
+  author    = {Domenico Cantone and
+               Cristiano Longo and
+               Marianna Nicolosi Asmundo},
+  editor    = {Wolfgang Faber and
+               Nicola Leone},
+  title     = {A Decision Procedure for a Two-sorted Extension of Multi-Level Syllogistic with the Cartesian Product and Some Map Constructs},
+  booktitle = {Proceedings of the 25th Italian Conference on Computational Logic,
+               Rende, Italy, July 7-9, 2010},
+  series    = {{CEUR} Workshop Proceedings},
+  volume    = {598},
+  publisher = {CEUR-WS.org},
+  year      = {2010},
+  url       = {http://ceur-ws.org/Vol-598/paper11.pdf},
+  timestamp = {Wed, 12 Feb 2020 16:44:22 +0100},
+  biburl    = {https://dblp.org/rec/conf/cilc/CantoneLA10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{mlss_first,
+author = {Ferro, Alfredo and Omodeo, Eugenio G. and Schwartz, Jacob T.},
+title = {Decision procedures for elementary sublanguages of set theory. I. Multi-level syllogistic and some extensions},
+journal = {Communications on Pure and Applied Mathematics},
+volume = {33},
+number = {5},
+pages = {599-608},
+doi = {https://doi.org/10.1002/cpa.3160330503},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cpa.3160330503},
+year = {1980}
+}
+
+@article{mlss_np,
+author = {Cantone, Domenico and Omodeo, Eugenio G. and Policriti, Alberto},
+title = {The Automation of Syllogistic. II. Optimization and Complexity Issues},
+year = {1990},
+publisher = {Springer},
+volume = {6},
+number = {2},
+issn = {0168-7433},
+url = {https://doi.org/10.1007/BF00245817},
+doi = {10.1007/BF00245817},
+journal = {Journal of Automated Reasoning},
+pages = {173–187},
+}
+
+@InProceedings{mlss_first_tableau,
+author="Cantone, Domenico",
+editor="Galmiche, Didier",
+title="A fast saturation strategy for set-theoretic tableaux",
+booktitle="Automated Reasoning with Analytic Tableaux and Related Methods",
+year="1997",
+publisher="Springer",
+pages="122--137",
+isbn="978-3-540-69046-7"
+}
+
+@InProceedings{mlss_functions_quantification,
+author="Cantone, Domenico",
+editor="Galmiche, Didier",
+title="A fast saturation strategy for set-theoretic tableaux",
+booktitle="Automated Reasoning with Analytic Tableaux and Related Methods",
+year="1997",
+publisher="Springer",
+pages="122--137",
+isbn="978-3-540-69046-7"
+}
+
+@article{mlss_monotone_functions,
+title = {A Decision Procedure for a Sublanguage of Set Theory Involving Monotone, Additive, and Multiplicative Functions},
+journal = {Electronic Notes in Theoretical Computer Science},
+volume = {86},
+number = {1},
+pages = {49-60},
+year = {2003},
+note = {International Workshop on First-Order Theorem Proving},
+issn = {1571-0661},
+doi = {https://doi.org/10.1016/S1571-0661(04)80652-2},
+url = {https://www.sciencedirect.com/science/article/pii/S1571066104806522},
+author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
+}
 
