--- a/paper/sources.bib
+++ b/paper/sources.bib
@@ -33,6 +33,14 @@
   ISSN    = {2150-914x},
 }
 
+@inproceedings{hybrid_logic_workshop,
+  author  = {Asta Halkjær From},
+  title   = {Formalizing a Seligman-Style Tableau System for Hybrid Logic},
+  booktitle = {Isabelle Workshop},
+  year = {2022},
+  url = {https://files.sketis.net/Isabelle_Workshop_2022/Isabelle_2022_paper_13.pdf}
+}
+
 @inproceedings{new_fast_tableau,
   author    = {Domenico Cantone and
                Calogero G. Zarba},
@@ -221,8 +229,7 @@
   editor    = {Wolfgang Faber and
                Nicola Leone},
   title     = {A Decision Procedure for a Two-sorted Extension of Multi-Level Syllogistic with the Cartesian Product and Some Map Constructs},
-  booktitle = {Proceedings of the 25th Italian Conference on Computational Logic,
-               Rende, Italy, July 7-9, 2010},
+  booktitle = {Italian Conference on Computational Logic},
   series    = {{CEUR} Workshop Proceedings},
   volume    = {598},
   publisher = {CEUR-WS.org},
@@ -271,17 +278,6 @@ pages="122--137",
 isbn="978-3-540-69046-7"
 }
 
-@InProceedings{mlss_functions_quantification,
-author="Cantone, Domenico",
-editor="Galmiche, Didier",
-title="A fast saturation strategy for set-theoretic tableaux",
-booktitle="Automated Reasoning with Analytic Tableaux and Related Methods",
-year="1997",
-publisher="Springer",
-pages="122--137",
-isbn="978-3-540-69046-7"
-}
-
 @article{mlss_monotone_functions,
 title = {A Decision Procedure for a Sublanguage of Set Theory Involving Monotone, Additive, and Multiplicative Functions},
 journal = {Electronic Notes in Theoretical Computer Science},
@@ -294,5 +290,40 @@ issn = {1571-0661},
 doi = {https://doi.org/10.1016/S1571-0661(04)80652-2},
 url = {https://www.sciencedirect.com/science/article/pii/S1571066104806522},
 author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
+}
+
+@inproceedings{mlss_quantification,
+  author    = {Domenico Cantone and
+               Calogero G. Zarba},
+  editor    = {Neil V. Murray},
+  title     = {A Tableau-Based Decision Procedure for a Fragment of Set Theory Involving
+               a Restricted Form of Quantification},
+  booktitle = {Automated Reasoning with Analytic Tableaux and Related Methods},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {1617},
+  pages     = {97--112},
+  publisher = {Springer},
+  year      = {1999},
+  url       = {https://doi.org/10.1007/3-540-48754-9\_12},
+  doi       = {10.1007/3-540-48754-9\_12},
+  timestamp = {Tue, 14 May 2019 10:00:54 +0200},
+  biburl    = {https://dblp.org/rec/conf/tableaux/CantoneZ99.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{modal_logic_lean,
+  title = "A Verified Proof of Craig Interpolation for Basic Modal Logic via Tableaux in Lean",
+  author = "Malvin Gattinger",
+  note = "\url{https://malv.in/2022/AiML2022-basic-modal-interpolation-lean.pdf}, Short presentation",
+  year = 2022,
+}
+
+@inproceedings{ecumenical_logic,
+  title={Coq Formalization of a Tableau for the Classical-Intuitionistic Propositional Fragment of Ecumenical Logic},
+  author={Leme, Renato R and Venturi, Giorgio and Lopes, Bruno},
+  booktitle={Anais do III Workshop Brasileiro de L{\'o}gica},
+  pages={25--32},
+  year={2022},
+  organization={SBC}
 }
 
