--- a/paper/sources.bib
+++ b/paper/sources.bib
@@ -82,21 +82,18 @@
   school={Universität Karlsruhe},
   type = {Diploma thesis}
 }
-
-@article{zfc_in_hol2,
-  author    = {Lawrence C. Paulson},
-  title     = {Wetzel: Formalisation of an Undecidable Problem Linked to the Continuum
-               Hypothesis},
-  journal   = {CoRR},
-  volume    = {abs/2205.03159},
-  year      = {2022},
-  url       = {https://doi.org/10.48550/arXiv.2205.03159},
-  doi       = {10.48550/arXiv.2205.03159},
-  eprinttype = {arXiv},
-  eprint    = {2205.03159},
-  timestamp = {Wed, 11 May 2022 17:29:40 +0200},
-  biburl    = {https://dblp.org/rec/journals/corr/abs-2205-03159.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+ 
+@InProceedings{zfc_in_hol2,
+  author="Paulson, Lawrence C.",
+  editor="Buzzard, Kevin
+  and Kutsia, Temur",
+  title="Wetzel: Formalisation of an Undecidable Problem Linked to the Continuum Hypothesis",
+  booktitle="Intelligent Computer Mathematics",
+  year="2022",
+  publisher="Springer International Publishing",
+  address="Cham",
+  pages="92--106",
+  isbn="978-3-031-16681-5"
 }
 
 @article{zfc_in_hol1,
